completed location bar

--- a/views/shared/navbar.erb
+++ b/views/shared/navbar.erb
@@ -1,8 +1,10 @@
 <nav>
   <ul>
     <form action="result_page" method='post'>
-  Enter search keywords:<br>
+  Enter search keywords:
   <input type="text" name="jobsearch">  
+  Enter Location:
+   <input type="text" name="location">  
   <input type="submit" value="Search">
 </form>
   </ul>
